sidebar overflow fixed

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -458,6 +458,7 @@ main#Rushees {
 						vertical-align: top;
 						text-align: left;
 						width: calc(100% - 85px - 10px);
+						overflow: hidden;
 
 						span {
 							color: #333;
